# test_learning

./: .gitignore  pyproject.toml
config/: config.yaml
scripts/: duckdb_to_pgsql.py  export_jsonl.py  learning_test.py  mysql_to_duckdb.py  mysql_to_jsonl.py  sql_to_jsonl.py  test.py  text.py  token_counter.py
util/: html_cleaner.py
